TSG S5: add narrator warning when siding with bandits

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -889,6 +889,12 @@
                                 side=4
                                 {QUANTITY amount 40 50 60}
                             [/gold]
+
+                            [message]
+                                speaker=narrator
+                                image=wesnoth-icon.png
+                                message= _ "Urza Afalas’s troops are exhausted from battle and cannot attack this turn, but are still able to withdraw and reposition themselves."
+                            [/message]
                         [/command]
                     [/option]
                 [/message]
